--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main id="maincontent">
     <section id="map-container" aria-hidden="true">
-      <div id="map" class="home"  tabindex="-1"></div>
+      <div id="map" class="home"></div>
     </section>
     <section>
       <div class="filter-options">
