--- a/restaurant.html
+++ b/restaurant.html
@@ -32,7 +32,7 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" aria-hidden="true">
       <div id="map"></div>
     </section>
     <!-- End map -->
