--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
       <h1><a href="/" aria-label="Home page">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" aria-role="navigation">
       <li><a href="/" aria-label="Home page">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -33,12 +33,12 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container" aria-hidden="true">
-      <div id="map"></div>
+      <div id="map" aria-role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <div class="res-img">
         <picture id="restaurant-picture">
         </picture>
