Change wrong 'aria-role' attribute to right one 'role'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main id="maincontent">
     <section id="map-container" aria-hidden="true">
-      <div id="map" class="home" aria-role="application"></div>
+      <div id="map" class="home" role="application"></div>
     </section>
     <section>
       <div class="filter-options">
