--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
       <h1><a href="/" aria-label="Home page">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-role="navigation">
+    <ul id="breadcrumb" role="navigation">
       <li><a href="/" aria-label="Home page">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -33,7 +33,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container" aria-hidden="true">
-      <div id="map" aria-role="application"></div>
+      <div id="map" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
