--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" role="main"> 
     <section id="map-container" aria-hidden="true">
       <div id="map" class="home" role="application"></div>
     </section>
@@ -37,12 +37,12 @@
     </section>
   </main>
 
+  <script type="application/javascript" charset="utf-8" src="js/sw_reg.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKRIkODyl52K4XmRBW7ezKhzIHJeF6Wpo&libraries=places&callback=initMap"></script>
-
   <footer id="footer">
-    Copyright (c) 2017 <a href="/" aria-label="Home page" id="footerLink"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2018 <a href="/" aria-label="Home page" id="footerLink"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
 </body>
