--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script type="application/javascript" charset="utf-8" src="js/sw_reg.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKRIkODyl52K4XmRBW7ezKhzIHJeF6Wpo&libraries=places&callback=initMap"></script>
   <footer id="footer">
     Copyright (c) 2018 <a href="/" aria-label="Home page" id="footerLink"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
