Add maps to cache Store restaurants info into indexedDB

--- a/restaurant.html
+++ b/restaurant.html
@@ -66,13 +66,10 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
-  <!-- SW registration -->
   <script type="application/javascript" charset="utf-8" src="js/sw_reg.js"></script>
-  <!-- Database helpers -->
-  <script type="text/javascript" src="js/dbhelper.js"></script>
-  <!-- Main javascript file -->
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
-  <!-- Google Maps -->
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKRIkODyl52K4XmRBW7ezKhzIHJeF6Wpo&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
