--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
+  <meta name="theme-color" content="#14598A">
 
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="/manifest.webmanifest">
 
   <title>Restaurant Reviews</title>
 </head>
