Few minor changes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="theme-color" content="#14598A">
 
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+<!--   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css"> -->
   <link rel="manifest" href="/manifest.webmanifest">
 
   <title>Restaurant Reviews</title>
@@ -44,6 +44,10 @@
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKRIkODyl52K4XmRBW7ezKhzIHJeF6Wpo&libraries=places&callback=initMap"></script>
+  
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  
   <footer id="footer">
     Copyright (c) 2018 <a href="/" aria-label="Home page" id="footerLink"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
