--- a/restaurant.html
+++ b/restaurant.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="theme-color" content="#14598A">
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/rest_info.css" type="text/css">
   <link rel="manifest" href="/manifest.webmanifest">
   <title>Restaurant Info</title>
 </head>
