Add new review offline and post it to the network when we're online again

--- a/restaurant.html
+++ b/restaurant.html
@@ -36,7 +36,9 @@
       </div>
     </section>
     <section id="reviews-container">
+      <h3 id='reviewsTitle'>Reviews</h3>
       <ul id="reviews-list"></ul>
+      <div id='new-review-wrap'></div>
     </section>
   </main>
   <footer id="footer">
