1. update IDB promised library. 2. Adding | Removing reviews offline

--- a/restaurant.html
+++ b/restaurant.html
@@ -46,16 +46,7 @@
     Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
-  <div id='dlgDeleteReview' class='modal'>
-    <div class='modal-content'>
-      <div class='modal-upper-text'>Delete the review? Are you sure?</div>
-      <div>
-        <button id='dlgBtnCancelDeleteReview' class='modal-button-danger'>No!</button>
-      </div>
-      <div>
-        <button id='dlgBtnDeleteReview' class='modal-button-ok'>Yes.</button>
-      </div>      
-    </div>
+  <div id='dlgModal' class='modal'>
   </div>
 
   <script type="application/javascript" charset="utf-8" src="js/sw_reg.js"></script>
