Edit reviews online + offline

--- a/restaurant.html
+++ b/restaurant.html
@@ -46,7 +46,7 @@
     Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
-  <div id='dlgModal' class='modal'>
+  <div id='dlgModalDeleteReview' class='modal'>
   </div>
 
   <script type="application/javascript" charset="utf-8" src="js/sw_reg.js"></script>
