Change CSS load (use preload)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="theme-color" content="#14598A">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" rel="preload" as="style" href="css/main.css" onload="this.rel='stylesheet'">
   <link rel="manifest" href="/manifest.webmanifest">
 
   <title>Restaurant Reviews</title>
