--- a/restaurant.html
+++ b/restaurant.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="theme-color" content="#14598A">
-  <link rel="stylesheet" href="css/rest_info.css" type="text/css">
-  <link rel="stylesheet" href="css/modal.css" type="text/css">
+  <link rel="stylesheet" rel="preload" as="style" href="css/rest_info.css" onload="this.rel='stylesheet'">
   <link rel="manifest" href="/manifest.webmanifest">
   <title>Restaurant Info</title>
 </head>
