a11y fix (button show map)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <section id="map-container" aria-hidden="true">
       <div id="map-loader">
         <img src="img/google-maps-100.png">
-        <div id="map-loader-text">Click here to show restaurants on map!</div>
+        <div id="map-loader-text">
+          <button>Click here to show restaurants on map!</buton>
+        </div>
       </div>
       <div id="map" class="home" role="application"></div>
     </section>
