--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="map-loader">
         <img src="img/google-maps-100.png">
         <div id="map-loader-text">
-          <button>Click here to show restaurants on map!</buton>
+          <button>Click here to see restaurants on map!</buton>
         </div>
       </div>
       <div id="map" class="home" role="application"></div>
